--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <h1 class="rd">Hello How are you</h1>
+<h1 class="rd">Hello How are you</h1>
+
 <footer></footer>
 </body>
 </html>
