third line added

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
 <body>
 <h1 class="rd">Hello How are you</h1>
 <h1 class="rd">Hello How are you</h1>
+<h1 class="rd">Hello How are you</h1>
+
 
 <footer></footer>
 </body>
